first section added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         </nav>
     </header>
 
+    <main>
+        <section class="first-sec">
+            <div class="first-sec-text">
+                <h1>Start your Journey as Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.</p>
+
+                <button class="prebook">
+                    <span>Prebook now</span>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
+            <div class="first-sec-img">
+                <img src="/images/main-camera.png" alt="">
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
