added missing image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </button>
             </div>
             <div class="first-sec-img">
-                <img src="/images/main-camera.png" alt="">
+                <img src="images/main-camera.png" alt="">
             </div>
         </section>
     </main>
